option java_package = "ru.bozaro.protobuf.example";

option java_outer_classname = "ExampleProto";

option java_multiple_files = true;

option java_generic_services = true;

service Example {
	rpc Hello (HelloRequest) returns (HelloResponse);
	rpc Echo (EchoMessage) returns (EchoMessage);
}

message HelloRequest {
	required string person = 1;
	optional string title = 2 [default = "Mr"];
}

message HelloResponse {
	required string greeting = 1;
}

message EchoMessage {
	required string text = 1;
}
